# mini-project

Archive/: README.md  UV_SETUP.md  chatbot_ui.html  docker-compose.yml  init-uv.sh  pyproject.toml  requirements.txt
Archive/app/: main.py  ollama_client.py
Archive/chatbot_nl_sql.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Archive/db/: init.sql
